// Copyright 2017 Intel Corporation
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// ----------------------------------------------------------------------------

syntax = "proto3";

import "rule.proto";

message Offer {

    enum Status {
        STATUS_UNSET  = 0;
        OPEN = 1;
        ACCEPTED = 2;
        REJECTED = 3;
        CANCELED = 4;
    }

    string id = 1;
    string label = 2;
    string description = 3;
    repeated string owners = 4;

    string source = 5;
    sint64 source_quantity = 6;

    string target = 7;
    sint64 target_quantity = 8;

    repeated Rule rules = 9;

    Status status = 10;

    // Timestamp of the offer
    uint64 timestamp = 11;
}

message OfferContainer {
    repeated Offer entries = 1;
}
